# AgenticRAG

./: .gitignore  README.md  read_me.txt
agentic_rag/: app_agent.py  app_agentic.py  app_rag.py  config.py  main.py  requirements.txt
agentic_rag/agentic_rag_crew/: README.md  pyproject.toml
agentic_rag/agentic_rag_crew/src/agentic_rag_crew/: config.py  crew.py  main.py
agentic_rag/agentic_rag_crew/src/agentic_rag_crew/config/: agents.yaml  tasks.yaml
agentic_rag/agentic_rag_crew/src/agentic_rag_crew/data/output/chroma/persistent_directory/177f6153-26ae-42a7-8e09-ea6f7ee95666/: index_metadata.pickle
agentic_rag/agentic_rag_crew/src/agentic_rag_crew/data/output/chroma/persistent_directory/18ce00d7-960b-4ed6-bb22-506b5bcb5875/: index_metadata.pickle
agentic_rag/agentic_rag_crew/src/agentic_rag_crew/data/output/chroma/persistent_directory/3b3f1a04-1d1f-48b7-9c37-1caa9a955798/: index_metadata.pickle
agentic_rag/agentic_rag_crew/src/agentic_rag_crew/tools/: rag_tool.py  web_tool.py
agentic_rag/agents/: answer_agent.py  evaluator_agent.py  grader_agent.py  hallucination_agent.py  memory_agent.py  rephrasing_agent.py  retriever_agent.py  rewriting_agent.py  router_agent.py  travel_agent.py
agentic_rag/app/: app_agent_ant.py
agentic_rag/discover/: document.py  formatting.py  processing.py  schema.py  template.py
agentic_rag/embedding/: chroma_delete.py  chroma_utils.py  pdf_utils.py  txt_utils.py
agentic_rag/tasks/: answer_task.py  evaluator_task.py  grader_task.py  hallucination_task.py  memory_task.py  planning_task.py  rephrasing_task.py  router_task.py  (+2 more)
(+39 files in other folders)
